# haskfuck

./: .gitignore  Haskfuck.cabal  README.md
src/: Code.hs  Input.hs  Interpreter.hs  Main.hs  Output.hs  Parser.hs  Tape.hs  Types.hs
