name:                 Haskfuck
version:              0.0.1
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               jnmeyr
maintainer:           jnmeyr@users.noreply.github.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Haskfuck
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
